# avian

./: .gitignore  .travis.yml  CMakeLists.txt  build.gradle  makefile
classpath/: CMakeLists.txt  java-lang.cpp  java-util-zip.cpp  jni-util.h
classpath/java/lang/invoke/: AbstractValidatingLambdaMetafactory.java  BoundMethodHandle.java  CallSite.java  ConstantCallSite.java  DirectMethodHandle.java  DontInline.java  ForceInline.java  InfoFromMemberName.java  InnerClassLambdaMetafactory.java  InvokeDynamic.java  InvokerBytecodeGenerator.java  Invokers.java  LambdaConversionException.java  LambdaForm.java  LambdaMetafactory.java  MemberName.java  MethodHandle.java  MethodHandleImpl.java  MethodHandleInfo.java  MethodHandleNatives.java  MethodHandleProxies.java  MethodHandleStatics.java  MethodHandles.java  MethodType.java  MethodTypeForm.java  MutableCallSite.java  ProxyClassesDumper.java  SerializedLambda.java  SimpleMethodHandle.java  Stable.java  SwitchPoint.java  VolatileCallSite.java  WrongMethodTypeException.java
cmake/: Platform.cmake
example/: app.mk  makefile  swt.pro
example/embedding/: .gitignore  build.sh  embedded-jar-main.cpp
example/kaleidoscope/: main.cpp  test.cpp  toy.cpp  toy.h
example/src/: objc.m
findings/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
findings/crashes/: README.txt  id:000000,sig:11,src:000000,op:flip1,pos:69  id:000001,sig:06,src:000000,op:flip1,pos:206  id:000002,sig:06,src:000000,op:flip1,pos:229  id:000003,sig:06,src:000000,op:flip1,pos:229  id:000004,sig:06,src:000000,op:flip1,pos:230  id:000005,sig:06,src:000000,op:flip1,pos:230  id:000006,sig:06,src:000000,op:flip1,pos:230  id:000007,sig:06,src:000000,op:flip1,pos:230  id:000008,sig:06,src:000000,op:flip1,pos:231  id:000009,sig:06,src:000000,op:flip1,pos:232  id:000010,sig:06,src:000000,op:flip1,pos:233  id:000011,sig:06,src:000000,op:flip1,pos:234  id:000012,sig:06,src:000000,op:flip1,pos:238  id:000013,sig:06,src:000000,op:flip1,pos:240  id:000014,sig:06,src:000000,op:flip1,pos:240  id:000015,sig:06,src:000000,op:flip1,pos:240  id:000016,sig:06,src:000000,op:flip1,pos:240  id:000017,sig:06,src:000000,op:flip1,pos:243  id:000018,sig:06,src:000000,op:flip1,pos:246  id:000019,sig:06,src:000000,op:flip1,pos:248  id:000020,sig:06,src:000000,op:flip1,pos:248  id:000021,sig:06,src:000000,op:flip1,pos:249  id:000022,sig:06,src:000000,op:flip1,pos:249  id:000023,sig:06,src:000000,op:flip1,pos:249  id:000024,sig:11,src:000000,op:flip1,pos:251  id:000025,sig:06,src:000000,op:flip1,pos:254  id:000026,sig:06,src:000000,op:flip1,pos:255  id:000027,sig:06,src:000000,op:flip1,pos:256  id:000028,sig:06,src:000000,op:flip1,pos:257  id:000029,sig:06,src:000000,op:flip1,pos:268  id:000030,sig:06,src:000000,op:flip1,pos:269  id:000031,sig:06,src:000000,op:flip1,pos:273  id:000032,sig:06,src:000000,op:flip1,pos:324  id:000033,sig:06,src:000000,op:flip1,pos:353  id:000034,sig:06,src:000000,op:flip1,pos:360  id:000035,sig:06,src:000000,op:flip1,pos:365  id:000036,sig:06,src:000000,op:flip1,pos:367  id:000037,sig:06,src:000000,op:flip1,pos:389  id:000038,sig:06,src:000000,op:flip1,pos:498  (+456 more)
findings/hangs/: id:000000,src:000000,op:flip1,pos:667  id:000001,src:000000,op:flip1,pos:667  id:000002,src:000000,op:flip1,pos:721  id:000003,src:000000,op:flip1,pos:724  id:000004,src:000000,op:flip1,pos:725  id:000005,src:000000,op:flip1,pos:726  id:000006,src:000000,op:flip1,pos:787  id:000007,src:000000,op:flip1,pos:789  id:000008,src:000000,op:flip1,pos:833  id:000009,src:000000,op:flip2,pos:666  id:000010,src:000000,op:flip2,pos:668  id:000011,src:000000,op:flip2,pos:721  id:000012,src:000000,op:flip2,pos:787  id:000013,src:000000,op:flip4,pos:666  id:000014,src:000000,op:flip4,pos:721  id:000015,src:000000,op:flip4,pos:792  id:000016,src:000000,op:arith8,pos:337,val:-31  id:000017,src:000000,op:arith8,pos:791,val:-8  id:000018,src:000011,op:flip8,pos:823  id:000019,src:000065,op:arith8,pos:394,val:+9  id:000020,src:000068,op:arith8,pos:360,val:-20  id:000021,src:000075,op:flip2,pos:187  id:000022,src:000145,op:flip1,pos:668  id:000023,src:000148,op:flip1,pos:668  id:000024,src:000171,op:arith8,pos:113,val:+28  id:000025,src:000296,op:arith8,pos:763,val:+3  id:000026,src:000296,op:arith8,pos:763,val:+24  id:000027,src:000296,op:arith8,pos:765,val:-3  id:000028,src:000296,op:arith16,pos:68,val:-2  id:000029,src:000296,op:arith16,pos:113,val:be:-16  id:000030,src:000296,op:arith16,pos:156,val:be:-14  id:000031,src:000296,op:arith16,pos:178,val:be:-11  id:000032,src:000296,op:arith16,pos:302,val:-27  id:000033,src:000296,op:arith16,pos:374,val:be:-33  (+19 more)
make/: classpath.mk  rules.mk
script/: find-java-home.sh
src/: CMakeLists.txt  compile.cpp  embed.cpp  finder.cpp  interpret.cpp  jnienv.cpp  lzma-decode.cpp  lzma-encode.cpp  machine.cpp  main.cpp  types.def
src/avian/: alloc-vector.h  append.h  arch.h  bootimage.h  classpath-common.h  common.h  environment.h  finder.h  lzma.h  machine.h  wasm.h  x86.h  zlib-custom.h  zone.h
src/codegen/: compiler.cpp
src/codegen/compiler/: event.cpp  value.h
src/heap/: heap.cpp
src/jvm/: CMakeLists.txt
src/system/: CMakeLists.txt  ffi.cpp  posix.cpp  web.cpp  windows.cpp
src/system/posix/: crash.cpp  signal.cpp
src/tools/binary-to-object/: main.cpp
src/tools/bootimage-generator/: main.cpp
src/tools/object-writer/: CMakeLists.txt  elf.cpp  mach-o.cpp  pe.cpp  tools.cpp  wasm.cpp
src/tools/type-generator/: CMakeLists.txt  main.cpp
src/util/: fixed-allocator.cpp  string.cpp
test/: InvokeDynamic.java  InvokeDynamicTest.java  Zip.java
unittest/codegen/: assembler-test.cpp
(+1112 files in other folders)
